<resources>
    <string name="start">Find and connect</string>
    <string name="remember">You connected to Bluetooth</string>
    <string name="auth_dialog_title">Registration failed</string>
    <string name="auth_dialog_message">Check you registration</string>
    <string name="help_dialog_title">New alarm</string>
    <string name="help_dialog_message">Confirm or reject</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_reject">Reject</string>
    <string name="send_alarm">Press button!</string>
    <string name="download">Download</string>
    <string name="login_toast">Please, fill fields</string>
    <string name="widget_sos_text">SOS</string>
    <string name="doctors">Doctors</string>
    <string name="app_name">CardiaCare</string>
    <string name="title_activity_bluetooth_find">Find a device</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_userdata">Userdata</string>
    <string name="title_activity_user_account">Account</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_questionnaire">Questionnaire</string>
    <string name="title_activity_documents">Documents</string>
    <string name="title_activity_demographic_data">Demographic data</string>
    <string name="title_activity_laboratory_studies">Laboratory studies</string>
    <string name="title_activity_results_doctor">Survey results doctor</string>
    <string name="title_activity_results_blood">Results measuring blood pressure</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_forgot_password">Password Reset</string>
    <string name="dialog_title">Incorrect name</string>
    <string name="dialog_message">Check entered data</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_wifi_title">There is no network connection</string>
    <string name="dialog_wifi_message">Do you want to go to the settings to turn on Wi-Fi?</string>
    <string name="dialog_wifi_positive_button">Yes</string>
    <string name="dialog_wifi_negative_button">No</string>
    <string name="dialog_sos_title">Failed to get geodata</string>
    <string name="dialog_sos_message">The GPS function is disabled. SOS button is unavailable. Do you want to go to the settings to turn on GPS?</string>
    <string name="dialog_sos_positive_button">Go to the GPS settings</string>
    <string name="dialog_sos_negative_button">Cancel</string>
    <string name="dialog_gps_title">GPS is turned off</string>
    <string name="dialog_gps_message">Do you want to go to the settings to turn on GPS?</string>
    <string name="dialog_gps_positive_button">Yes</string>
    <string name="dialog_gps_negative_button">No</string>
    <string name="dialog_bluetooth_title">Bluetooth is turned off</string>
    <string name="dialog_bluetooth_message">Do you want to turn on Bluetooth?</string>
    <string name="dialog_bluetooth_positive_button">Yes</string>
    <string name="dialog_bluetooth_negative_button">No</string>
    <string name="dialog_ss_title">The application is not available</string>
    <string name="dialog_ss_message">Currently, the application can not connect to smart space. Please try again later</string>
    <string name="dialog_ss_positive_button">Restart application</string>
    <string name="dialog_ss_negative_button">Close application</string>
    <string name="dialog_server_error_title">Connection error</string>
    <string name="dialog_server_error_message">Failed to connect to server. Please try again later</string>
    <string name="dialog_server_error_positive_button">OK</string>
    <string name="dialog_mis_error_title">Connection error</string>
    <string name="dialog_mis_error_message">Failed to connect to medical information system. Please try again later</string>
    <string name="dialog_mis_error_positive_button">OK</string>
    <string name="dialog_unregistered_user_title">Connection error</string>
    <string name="dialog_unregistered_user_message">Unregistered user</string>
    <string name="dialog_unregistered_user_positive_button">OK</string>
    <string name="dialog_document_title">Connection error</string>
    <string name="dialog_document_message">The relevant document was not found</string>
    <string name="dialog_document_positive_button">OK</string>
    <string name="dialog_authorization_title">Authorization error</string>
    <string name="dialog_authorization_message">Check entered data</string>
    <string name="dialog_authorization_positive_button">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Send</string>
    <string name="action_change">Change password</string>
    <string name="about_text">CardiaCare is an application for blood pressure and heart function monitoring of a patient. It provides a connection between wearable cardiac monitor, patient and doctor.
        \n\nCurrently the application works in connection with FRUCT ECG and Activity Monitor. App provide a ability to control the state of health through regular surveys. All data is saved in CardiaCare.ru server.
        \n\nDoctors will be able to monitor heart activity of their patients in real-time remotely, and receive advanced ECG analysis in conjunction with blood pressure, given the description of the state of health obtained from surveys.
    </string>
    <string name="about_version">Version 0.1.1</string>
    <string name="about_home_page">Home page http://cardiacare.ru</string>
    <string name="about_copyright">\u00A9 Petrozavodsk state university</string>
    <string name="about_dev">
    Developers:
    \n\t\n Iuliia Zavialova
    \n Kirill Orlov
    \n Kristina Shevcova
    \n Vasilii Fokin
    </string>
    <string name="about_legal_osl">Open Source Licenses</string>
    <string name="about_legal_osl_text">
        OkHttp <a href="https://square.github.io/okhttp/#license">https://square.github.io/okhttp</a>
        \n\nGraphView <a href="http://www.android-graphview.org/">http://www.android-graphview.org</a>
        \n\nGson  <a href="https://github.com/google/gson">https://github.com/google/gson</a>
    </string>
    <string name="about_legal_pp">Privacy Police</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="tvFirstName">First name</string>
    <string name="tvSecondName">Second name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="patronymic">Patronymic</string>
    <string name="birthDate">Birth date</string>
    <string name="sex">Sex</string>
    <string name="residence">Residence</string>
    <string name="contactInformation">Сontact information</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="ecg_demonstration">ECG demonstration</string>
    <string name="user_create_account">Create account?</string>
    <string name="user_forgot_password">Forgot password?</string>
</resources>