<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.cardiacare.cardiacare.MainActivity">
    <!--android:showAsAction="withText|ifRoom"-->

    <item
        android:id="@+id/ecg"
        android:orderInCategory="100"
        android:title="@string/ecg_demonstration"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAbout"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuHelp"
        android:title="@string/help"
        app:showAsAction="never" />
    <!--<item-->
    <!--android:id="@+id/menuHelp"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"-->
    <!--android:title="@string/help"/>-->
    <!--   <item
           android:id="@+id/menuDownload"
           android:orderInCategory="100"
           app:showAsAction="never"
           android:title="@string/download"/> -->
    <!--<item-->
        <!--android:id="@+id/menuUserData"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/userdata"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
    <!--android:id="@+id/documentsData"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"-->
    <!--android:title="@string/documents"/>-->
    <item
        android:id="@+id/exitAccount"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

    <!--    <item
            android:id="@+id/menuExit"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/exit"/>-->

</menu>
