<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.cardiacare.cardiacare.hisdocuments.DemographicDataActivity"
    tools:showIn="@layout/activity_demographic_data">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:enabled="false"
            android:editable="false"
            android:text="Ivan"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/name"
            android:id="@+id/Name"
            android:padding="8dp"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSurname"
            android:inputType="text"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:text="Ivanov"
            android:enabled="false"
            android:editable="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:id="@+id/Surname"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPatronymic"
            android:inputType="text"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:enabled="false"
            android:editable="false"
            android:text="Ivanovich"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patronymic"
            android:id="@+id/Patronymic"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/etBirthDate"
            android:enabled="false"
            android:editable="false"
            android:text="01.01.1970"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthDate"
            android:id="@+id/BirthDate"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSex"
            android:inputType="text"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:enabled="false"
            android:editable="false"
            android:text="Male"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/Sex"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etResidence"
            android:inputType="text"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:enabled="false"
            android:editable="false"
            android:text="Petrozavodsk"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residence"
            android:id="@+id/tvResidence"
            android:padding="8dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etContactInformation"
            android:inputType="text"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:padding="8dp"
            android:enabled="false"
            android:editable="false"
            android:text="8-800-***-**-**"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactInformation"
            android:id="@+id/ContactInformation"
            android:padding="8dp" />

    </LinearLayout>
</ScrollView>
</RelativeLayout>
