<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_account_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/UserAuthorizationPageTheme"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
                <!--android:textColor="@color/colorBackground"-->
                <!--android:textColorHint="@color/colorBackground"-->
                <!--android:textColorLink="@color/colorBackground" />-->

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />
                <!--android:textColor="@color/colorBackground"-->
                <!--android:textColorHint="@color/colorBackground"-->
                <!--android:textColorLink="@color/colorBackground"/>-->

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/nextButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorBackground"
                android:textStyle="bold"
                android:theme="@style/AppCompatButtonStyle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:clickable="true"
                    android:text="@string/user_create_account"
                    android:textColor="@color/toolbarTextColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:clickable="true"
                    android:gravity="end"
                    android:text="@string/user_forgot_password"
                    android:textColor="@color/toolbarTextColor"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_above="@+id/login_form"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/cardiacare"
        tools:ignore="ContentDescription" />

</RelativeLayout>

